--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,3 @@
-{{page-title "GenconBuddy"}}
-
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
+{{page-title "Gen Con Buddy"}}
 
 {{outlet}}
