--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,16 @@
 <h1>Gen Con</h1>
 
+<dl>
+  <dt>Badge registration</dt>
+  <dd>Feb 11</dd>
+  <dt>Hotel registration</dt>
+  <dd>Feb 25</dd>
+  <dt>Event registration</dt>
+  <dd>May 19</dd>
+  <dt>Gen Con</dt>
+  <dd>Aug 1-4</dd>
+</dl>
+
 <Routes />
 
 {{outlet}}
