--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,34 @@
 @import url("reset.css");
+@import url("event-search.css");
 
 [type="number"] {
   width: 3em;
+}
+
+body {
+  max-width: 80%;
+  margin: 0 auto 3em;
+}
+
+fieldset {
+  border: 0;
+  padding: 0;
+}
+
+h1 {
+  margin-top: 3em;
+}
+
+summary {
+  cursor: pointer;
+}
+
+input,
+select {
+  line-height: 1.25em;
+  padding: 0.25em;
+}
+
+li + li {
+  margin-top: 1em;
 }
